BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Call2_Detail_vod__c.object
<CustomObject>
    <description>This object stores all product details data recorded on any interaction.</description>
    <fields>
        <fullName>Account_Source_Country_BMS_CORE__c</fullName>
        <formula>TEXT(  Call2_vod__r.Account_vod__r.Account_Source_Country_BMS_CORE__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account_Source_Country_BMS_CORE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call2_vod__c</fullName>
        <description>Lookup to Call2. All call details need to refer to a call.</description>
        <label>Call</label>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipName>Call2_Detail_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Detail_Group_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Detail Group</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Call Details (Detail Group)</relationshipLabel>
        <relationshipName>Call_Details_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detail_Priority_Text_vod__c</fullName>
        <description>Parallel detail priority field in text format for group by in MCCP calculation</description>
        <label>Detail Priority Text</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail_Priority_vod__c</fullName>
        <description>A whole number representing the order in which the detail was delivered.</description>
        <label>Detail Priority</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID_BMS__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Parent_Call_vod__c</fullName>
        <description>Formula Field to determine if the Call Detail record is part of the Parent Call or of an Attendee Call record.  1 indicates that the record is associated with the Parent Call.  0 indicates that it is associated with an Attendee Call.</description>
        <formula>IF(LEN(Call2_vod__r.Parent_Call_vod__c )&gt;0, 0,1)</formula>
        <label>Is Parent Call?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helper field for data loads</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the product detailed in the Product Catalog.</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipName>Call_Detail_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_vod__c</fullName>
        <description>Type of the detail.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>EDetail_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper_Detail_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Interaction Detail</label>
    <nameField>
        <displayFormat>ID{000000000}</displayFormat>
        <label>Interaction Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interaction Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>